// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests Correctly displays options for grace periods 1`] = `
[
  {
    "dir": undefined,
    "id": "auth_btn_okta_password_1234abc",
    "label": "Password",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1234abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.password.label",
      "authenticator": {
        "displayName": "Okta Password",
        "gracePeriod": {
          "expiry": "2035-09-27 18:00:00.000.",
          "id": "gpe4hiasrPJX4zwZY123",
        },
        "id": "",
        "key": "okta_password",
        "methods": [
          {
            "type": "password",
          },
        ],
        "type": "password",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_password",
      "description": "oie.password.authenticator.description",
      "gracePeriodExpiry": "09/27/2035, 06:00 PM EDT",
      "gracePeriodRequiredDescription": "oie.enrollment.policy.grace.period.required.in.days",
      "iconName": "okta_password_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_password",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
  {
    "dir": undefined,
    "id": "auth_btn_okta_email_1235abc",
    "label": "Email",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1235abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.email.label",
      "authenticator": {
        "displayName": "Okta Email",
        "gracePeriod": {
          "expiry": "2022-09-27 18:00:00.000.",
          "id": "gpe4hiasrPJX4zwZY123",
        },
        "id": "",
        "key": "okta_email",
        "methods": [
          {
            "type": "email",
          },
        ],
        "type": "email",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_email",
      "description": "oie.email.authenticator.description",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "okta_email_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_email",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
  {
    "dir": undefined,
    "id": "auth_btn_phone_number_1235abc",
    "label": "Phone",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1235abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.phone.label",
      "authenticator": {
        "displayName": "Phone",
        "id": "",
        "key": "phone_number",
        "methods": [
          {
            "type": "phone",
          },
        ],
        "type": "phone",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "oie.phone.authenticator.description",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "phone_number_2",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests Does not display options when grace period date badly formatted 1`] = `
[
  {
    "dir": undefined,
    "id": "auth_btn_okta_password_1234abc",
    "label": "Password",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1234abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.password.label",
      "authenticator": {
        "displayName": "Okta Password",
        "gracePeriod": {
          "expiry": "BAD",
          "id": "gpe4hiasrPJX4zwZY123",
        },
        "id": "",
        "key": "okta_password",
        "methods": [
          {
            "type": "password",
          },
        ],
        "type": "password",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_password",
      "description": "oie.password.authenticator.description",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "okta_password_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_password",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests Does not display options when locale not supplied 1`] = `
[
  {
    "dir": undefined,
    "id": "auth_btn_okta_password_1234abc",
    "label": "Password",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1234abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.password.label",
      "authenticator": {
        "displayName": "Okta Password",
        "gracePeriod": {
          "expiry": "2035-09-27 18:00:00.000.",
          "id": "gpe4hiasrPJX4zwZY123",
        },
        "id": "",
        "key": "okta_password",
        "methods": [
          {
            "type": "password",
          },
        ],
        "type": "password",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_password",
      "description": "oie.password.authenticator.description",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "okta_password_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_password",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests should detect authenticator options for additional enroll 1`] = `
[
  {
    "dir": undefined,
    "id": "auth_btn_okta_password_1234abc",
    "label": "Password",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1234abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.password.label",
      "authenticator": {
        "displayName": "Okta Password",
        "id": "",
        "key": "okta_password",
        "methods": [
          {
            "type": "password",
          },
        ],
        "type": "password",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_password",
      "description": "oie.password.authenticator.description",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "okta_password_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_password",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
  {
    "dir": undefined,
    "id": "auth_btn_okta_email_1235abc",
    "label": "Email",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1235abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.email.label",
      "authenticator": {
        "displayName": "Okta Email",
        "id": "",
        "key": "okta_email",
        "methods": [
          {
            "type": "email",
          },
        ],
        "type": "email",
      },
      "ctaLabel": "enroll.choices.setup.another",
      "dataSe": "okta_email",
      "description": "oie.email.authenticator.description",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "okta_email_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": true,
      "isEnroll": true,
      "key": "okta_email",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests should format on_prem authenticator option when display name exists 1`] = `
[
  {
    "dir": undefined,
    "id": "auth_btn_onprem_mfa_undefined",
    "label": "On Prem",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": "onprem_mfa",
      },
      "ariaLabel": "oie.select.authenticator.enroll.named.authenticator.label",
      "authenticator": {
        "displayName": "Some Company Name",
        "id": "",
        "key": "onprem_mfa",
        "methods": [
          {
            "type": "",
          },
        ],
        "type": "",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "onprem_mfa-onprem_mfa",
      "description": "oie.on_prem.authenticator.description",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "onprem_mfa_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "onprem_mfa",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests should return formatted Okta Verify method type options when raw options are provided 1`] = `
[
  {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.enroll.okta_verify.authenticator.label",
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "oie.okta_verify.authenticator.description",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.enroll.okta_verify.authenticator.label",
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "oie.okta_verify.authenticator.description",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should not reorder OV option when fastpass is not an option 1`] = `
[
  {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.totp.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "Code",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.push.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "Push",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "dir": "ltr",
    "id": "auth_btn_phone_number_undefined",
    "label": "phone_number",
    "noTranslate": true,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.verify.phone.with.phone.label",
      "authenticator": {
        "displayName": "",
        "id": "",
        "key": "phone_number",
        "methods": [
          {
            "type": "",
          },
        ],
        "profile": {
          "phoneNumber": "216XXXXX43",
        },
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "216XXXXX43",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "phone_number_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should not reorder OV option when method types are not set in IDX response 1`] = `
[
  {
    "dir": undefined,
    "id": "auth_btn_okta_verify_abc234",
    "label": "oie.okta_verify.label",
    "noTranslate": false,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "abc234",
        "authenticator.methodType": "signed_nonce",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.signed_nonce.label",
      "authenticator": {
        "displayName": "",
        "id": "",
        "key": "okta_verify",
        "methods": [
          {
            "type": "",
          },
        ],
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-signed_nonce",
      "description": "Okta Verify",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "okta_verify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
  {
    "dir": "ltr",
    "id": "auth_btn_phone_number_undefined",
    "label": "phone_number",
    "noTranslate": true,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.verify.phone.with.phone.label",
      "authenticator": {
        "displayName": "",
        "id": "",
        "key": "phone_number",
        "methods": [
          {
            "type": "",
          },
        ],
        "profile": {
          "phoneNumber": "216XXXXX43",
        },
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "216XXXXX43",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "phone_number_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should return formatted Okta Verify method type options when raw options are provided 1`] = `
[
  {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.totp.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "Code",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.push.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "Push",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should set fastpass at beginning of array when deviceKnown = true with multiple OV method types 1`] = `
[
  {
    "id": "auth_btn_okta_verify_signed_nonce",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "signed_nonce",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.signed_nonce.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-signed_nonce",
      "description": "Fastpass",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_2",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.totp.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "Code",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.push.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "Push",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "dir": "ltr",
    "id": "auth_btn_phone_number_undefined",
    "label": "phone_number",
    "noTranslate": true,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.verify.phone.with.phone.label",
      "authenticator": {
        "displayName": "",
        "id": "",
        "key": "phone_number",
        "methods": [
          {
            "type": "",
          },
        ],
        "profile": {
          "phoneNumber": "216XXXXX43",
        },
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "216XXXXX43",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "phone_number_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should set fastpass at end of array when deviceKnown is not set with multiple OV method types 1`] = `
[
  {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.totp.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "Code",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.push.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "Push",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  {
    "dir": "ltr",
    "id": "auth_btn_phone_number_undefined",
    "label": "phone_number",
    "noTranslate": true,
    "options": {
      "actionParams": {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.verify.phone.with.phone.label",
      "authenticator": {
        "displayName": "",
        "id": "",
        "key": "phone_number",
        "methods": [
          {
            "type": "",
          },
        ],
        "profile": {
          "phoneNumber": "216XXXXX43",
        },
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "216XXXXX43",
      "gracePeriodExpiry": null,
      "gracePeriodRequiredDescription": null,
      "iconName": "phone_number_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
  {
    "id": "auth_btn_okta_verify_signed_nonce",
    "label": "oie.okta_verify.label",
    "options": {
      "actionParams": {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "signed_nonce",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.signed_nonce.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-signed_nonce",
      "description": "Fastpass",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_2",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
]
`;
